# python-pathschema

./: README.md  index.html  main.py  pyproject.toml  requirements.txt  test_schema.txt  test_schema_1.txt  test_schema_2.txt
.github/workflows/: build.yml  gh-pages.yml  main.yml  publish.yml
fss/: Parser.py  Validator.py  fss.py  parser.py  pathreport.py  utils.py  validator.py
js/: examples.js
pathschema/: __init__.py  __main__.py  exceptions.py  models.py  parser.py  utils.py  validator.py
src/: Parser.py  exceptions.py  fss.py  main.py  utils.py
tests/: test_DirPathNode.py  test_FilePathNode.py  test_Parse.py  test_Parser.py  test_PathNode.py  test_Validator.py  test_fssDirNode.py  test_fssFileNode.py  test_fssNode.py  test_string.py  test_validate.py
tests/experimentations/: .gitignore  generate_massive.py  test_invalid_schema.txt  test_schema.txt
web/: README.md  examples.js  index.html  input.css  output.css  package-lock.json  package.json  tailwind.config.js
web/css/: input.css  output.css
