[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-system-schema"
version = "0.0.1"
authors = [
  { name="Apollo-Roboto", email="Apollo_Roboto@outlook.com" },
]
description  = ""
readme = "README.md"
license = "MIT"
keywords = []
dependencies = [
	"PyYAML",
	"python-dotenv",
	"jsonschema",
	"requests",
]
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/"
