[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathschema"
version = "0.0.1"
authors = [
  { name="Apollo-Roboto", email="Apollo_Roboto@outlook.com" },
]
description  = "Standardize and plan out a file structure!"
readme = "README.md"
license = "MIT"
keywords = []
dependencies = [
	"requests==2.30.0",
	"pylint==2.17.4",
	"colorama==0.4.6",
]
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Typing :: Typed",
	"Topic :: Software Development :: Libraries",
	"Topic :: System :: Filesystems",
	"Topic :: Utilities",
]

[project.urls]
"Source" = "https://github.com/Apollo-Roboto/python-pathschema"
